--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@epic-web/invariant": "^1.0.0",
     "@epic-web/remember": "^1.1.0",
     "@epic-web/totp": "^4.0.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mjackson/form-data-parser": "^0.7.0",
     "@mjackson/headers": "^0.10.0",
     "@nasa-gcn/remix-seo": "^2.0.1",
